fixed letter spacing on root, added menu items to drawer

--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -1,6 +1,6 @@
 .rightbar {
   flex: 2;
-  background-color: rgb(238, 245, 241);
+  background-color: rgb(46, 46, 46);
   justify-content: center;
 }
 
